--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Vue-product-cart</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>vue-cli</title>
+  </head>
   <body>
-    <div id="app">
-    </div>
-    <script src="/dist/build.js"></script>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
   </body>
 </html>
